--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: MammaMia  
+    name: NelloDio  
     runtime: python  
     buildCommand: pip install -r requirements.txt  
     startCommand: python3 run.py  
