--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "Siti": {
     "StreamingCommunity": {
-      "url": "https://streamingunity.cam",
+      "url": "https://streamingcommunityz.city",
       "SC_ForwardProxy": "0",
       "SC_PROXY": "0",
       "VX_ForwardProxy": "0",
@@ -13,7 +13,7 @@
       "enabled": "1"
     },
     "Tantifilm": {
-      "url": "https://www.alliance4creativity.com",
+      "url": "https://www.tanti.bond",
       "TF_ForwardProxy": "0",
       "TF_PROXY": "0",
       "enabled": "1"
@@ -30,7 +30,7 @@
       "enabled": "1"
     },
     "CB01": {
-      "url": "https://cb01net.live",
+      "url": "https://cb01net.today",
       "CB_PROXY": "0",
       "CB_ForwardProxy": "0",
       "MX_ForwardProxy": "0",
@@ -40,21 +40,21 @@
     "DDLStream": {
       "url": "https://ddlstreamitaly.co",
       "cookies": {
-        "ips4_device_key": "1496c03312d318b557ff53512202e757",
-        "ips4_IPSSessionFront": "d9ace0029696972877e2a5e3614a333b",
-        "ips4_member_id": "d9ace0029696972877e2a5e3614a333b",
-        "ips4_login_key": "71a501781ba479dfb91b40147e637daf"
+        "ips4_device_key": null,
+        "ips4_IPSSessionFront": null,
+        "ips4_member_id": null,
+        "ips4_login_key": null
       },
       "enabled": "1"
     },
     "Guardaserie": {
-      "url": "https://guardaserietv.lat",
+      "url": "https://guardaserietv.homes",
       "enabled": "1",
       "GS_ForwardProxy": "0",
       "GS_PROXY": "0"
     },
     "GuardaHD": {
-      "url": "https://guardahd.stream",
+      "url": "https://mostraguarda.stream",
       "enabled": "1",
       "GH_ForwardProxy": "0",
       "GH_PROXY": "0"
@@ -66,17 +66,17 @@
       "OST_PROXY": "0"
     },
     "AnimeWorld": {
-      "url": "https://www.animeworld.ac",
+      "url": "https://www.animeworld.so",
       "enabled": "1",
       "AW_ForwardProxy": "0",
       "AW_PROXY": "0"
     },
     "SkyStreaming": {
-      "url": "https://skystreaming.yoga",
+      "url": "https://skystreaming.watch",
       "enabled": "1"
     },
     "DaddyLiveHD": {
-      "url": "https://daddylive.dad",
+      "url": "https://daddylive.mp",
       "enabled": "1"
     }
   },
